# kanakku

./: .dev-config.yml  .gitignore  CLAUDE.md  DEV_MODE_SETUP.md  LICENSE  README.md
backend/: Dockerfile  entrypoint.sh  pyproject.toml  sonar-project.properties
backend/alembic/: env.py
backend/alembic/versions/: 0001_users_sessions_invite_tokens.py  0002_user_settings.py  0003_accounts.py  0004_payment_methods.py  0005_payees.py  0006_categories.py  0007_tags.py  0008_transactions.py  0009_splits.py  0010_net_expense_view.py  0011_budgets.py  0012_subscriptions.py  0013_piggy_banks.py  0014_import_schema.py  0015_llm_activity_log.py  0016_gpay_matches.py  0017_readonly_role.py  0018_report_dashboards.py  0019_export_jobs.py  0020_opening_balance_type.py  0021_payment_method_label_to_name.py  0022_budget_activated_at.py  0023_transaction_external_ref.py  0024_split_settlements.py  0025_piggy_bank_date_started.py  0026_split_multi_expense_payee_uniqueness.py  0027_fix_net_amount_view_partial_forgiveness.py  0028_spending_classification.py  0029_remove_credit_card_payment_method_type.py  0030_record_status_failed.py
backend/app/: cli.py  config.py  dependencies.py  dev_seed.py  main.py
backend/app/db/: session.py
backend/app/llm/: base.py  factory.py  logging.py  null_client.py  ollama_client.py
backend/app/models/: __init__.py  account.py  budget.py  category.py  export_job.py  gpay_match.py  import_batch.py  invite_token.py  llm_activity_log.py  payee.py  payment_method.py  piggy_bank.py  report_dashboard.py  session.py  split.py  subscription.py  tag.py  transaction.py  user.py  user_settings.py
backend/app/parsers/: base.py  registry.py
backend/app/routers/: accounts.py  auth.py  budgets.py  categories.py  dashboard.py  export.py  gpay.py  imports.py  payees.py  payment_methods.py  piggy_banks.py  recently_deleted.py  reports.py  settings.py  splits.py  subscriptions.py  tags.py  transactions.py
backend/app/schemas/: account.py  auth.py  budget.py  category.py  dashboard.py  export.py  gpay.py  imports.py  payee.py  payment_method.py  piggy_bank.py  reports.py  settings.py  split.py  subscription.py  tag.py  transaction.py
backend/scripts/: diagnose_statement.py  parse_statement.py
backend/tests/: _helpers.py  conftest.py  test_accounts.py  test_auth_endpoints.py  test_auth_invite.py  test_auth_setup.py  test_auto_backup.py  test_balance_verifier.py  test_budget_expander.py  test_budget_linking.py  test_budgets.py  test_budgets_schema.py  test_categories.py  test_cli.py  test_dashboard.py  test_dashboard_net_expense.py  test_db.py  test_dedup.py  test_expense_calculator.py  test_export.py  test_gpay_matcher.py  test_hdfc_parser.py  test_import_archive.py  test_import_schema.py  test_imports.py  test_llm_activity_log.py  test_llm_interface.py  test_migration.py  test_models_users.py  test_ollama_client.py  test_parser.py  test_payees.py  test_payment_methods.py  test_piggy_banks.py  test_recently_deleted.py  test_report_dashboards.py  test_reports_query.py  test_reports_schema.py  test_security.py  test_settings.py  (+9 more)
(+286 files in other folders)
