[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kanakku"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic[email]>=2.0",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "argon2-cffi>=23.1",
    "arq>=0.26",
    "redis>=5.0",
    "httpx>=0.27",
    "python-dateutil>=2.9",
    "pikepdf>=9.0",
    "pdfplumber>=0.11",
    "python-multipart>=0.0.9",
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "factory-boy>=3.3",
    "ruff>=0.7",
    "mypy>=1.11",
    "types-python-jose>=3.3",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
